--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,5 @@ sonar.projectKey=KelseyJr_fc-sonarqube-js
 sonar.organization=kelseyjr
 
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+
+sonar.coverage.exclusions=./src/index.spec.js,./jest.config.js
