--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,4 +3,4 @@ sonar.organization=kelseyjr
 
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 
-sonar.coverage.exclusions=./src/index.spec.js,./jest.config.js
+sonar.coverage.exclusions=src/index.spec.js
